tests/invalid/foreign_include_file_missing.err_exp4
Error: can't open `./missing_file' for input: File not found or I/O error
